[package]
name = "c4ctrl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = { version = "0.17.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.21.2", default-features = false, features = ["tokio-macros", "rt"] }
